public interface Openable {
    void open();
    void close();
}