public interface ProximityAware {
    void proximityCallback();
}