public interface TimeoutAware {
    void timeOutCallback();
}